Finally fix table result unexpected overflow, cleanup code, re-declare BehaviorObject and unsuscribe properly for event table

--- a/HW8/front_end/src/app/event-details/event-details.component.css
+++ b/HW8/front_end/src/app/event-details/event-details.component.css
@@ -9,3 +9,7 @@
       height: 80vh;    
     }
   }
+
+  .bg-blur {
+    backdrop-filter: blur(10px);
+  }
